# dew

./: .gitignore  Cargo.toml  shell.nix
api/: Cargo.toml
api/src/v1/: mod.rs
back/: Cargo.toml  Dockerfile  compose.yaml
back/src/: main.rs  v1.rs
front/: Cargo.toml  cert.pem
front/src/: api.rs  lib.rs  main.rs  todo.rs
front/src/ui/: mod.rs  todo.rs  todo_input.rs
