[package]
name = "back"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
api = { path = "../api" }

axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
