[package]
name = "back"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
api = { path = "../api" }

axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
